# WinuxCmd

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CONTRIBUTING_ZH.MD  DREAMS.md  LICENSE  MEMORY.md  README-zh.md  README.md  TemplateLicense.lict  advanced-ai-learning.md  ai-coding-tools-discovery.md  ai-multimedia-discovery.md  explore-more-skills.sh  final-upgrade-summary.md  format-enhanced-simple.py  learning-log.md  network-learning-notes.md  self-learning-plan.md  self-upgrade-complete-report.md  skills-ecosystem-analysis.md  todo-libskills.md  update-cmx-skills-manual.sh  winuxcmd-google-style-guide.md  winuxcmd.json
benchmark/: CMakeLists.txt  benchmark_main.cpp
benchmark/cmd_benchmarks/: CMakeLists.txt  container_benchmark.cpp
examples/: CMakeLists.txt  constexpr_map_example.cpp
examples/container/: CMakeLists.txt  small_vector_example.cpp
examples/ffi/: CMakeLists.txt  ffi_example.c
src/ffi/: CMakeLists.txt  ffi.cpp  ffi.h
test/: CMakeLists.txt  test_commands.cpp
test/commands/bash/: test_ls_linux.sh
test/commands/diff/: diff_ls_results.ps1
test/commands/powershell/: test_ls_windows.ps1
tests/: CMakeLists.txt
tests/cat/: cat_basic.cpp  cat_pipe.cpp
tests/framework/: framework_pch.h  paths.h  paths_win32.cpp  pipeline.cpp  pipeline.h  process_win32.cpp  process_win32.h  temp_dir.h  test_main.cpp  tests_hooks.cpp  tests_hooks.h  tests_utils.h  wctest.h  wctest_hooks.cpp  wctest_main.h  winuxtest.h
tests/integration/: CMakeLists.txt  pipeline_integration_test.cpp
tests/unit/arch/: arch_unit_test.cpp
tests/unit/b2sum/: b2sum_unit_test.cpp
tests/unit/base64/: base64_unit_test.cpp
tests/unit/basename/: basename_unit_test.cpp
tests/unit/cal/: cal_unit_test.cpp
tests/unit/cat/: cat_unit_test.cpp
tests/unit/chmod/: chmod_unit_test.cpp
tests/unit/cksum/: cksum_unit_test.cpp
tests/unit/clear/: clear_unit_test.cpp
tests/unit/cmp/: cmp_unit_test.cpp
tests/unit/column/: column_unit_test.cpp
tests/unit/comm/: comm_unit_test.cpp
tests/unit/cp/: cp_unit_test.cpp
tests/unit/cpio/: cpio_unit_test.cpp
tests/unit/csplit/: csplit_unit_test.cpp
tests/unit/cut/: cut_unit_test.cpp
tests/unit/d2u/: d2u_unit_test.cpp
tests/unit/date/: date_unit_test.cpp
tests/unit/df/: df_unit_test.cpp
tests/unit/diff/: diff_unit_test.cpp
tests/unit/dirname/: dirname_unit_test.cpp
tests/unit/dos2unix/: dos2unix_unit_test.cpp
tests/unit/du/: du_unit_test.cpp
tests/unit/echo/: echo_unit_test.cpp
tests/unit/env/: env_unit_test.cpp
tests/unit/expand/: expand_unit_test.cpp
tests/unit/false/: false_unit_test.cpp
tests/unit/file/: file_unit_test.cpp
tests/unit/find/: find_unit_test.cpp
tests/unit/fmt/: fmt_unit_test.cpp
tests/unit/fold/: fold_unit_test.cpp
tests/unit/free/: free_unit_test.cpp
tests/unit/getconf/: getconf_unit_test.cpp
tests/unit/grep/: grep_unit_test.cpp
tests/unit/groups/: groups_unit_test.cpp
tests/unit/head/: head_unit_test.cpp
tests/unit/hmac256/: hmac256_unit_test.cpp
tests/unit/hostid/: hostid_unit_test.cpp
tests/unit/hostname/: hostname_unit_test.cpp
tests/unit/id/: id_unit_test.cpp
tests/unit/infocmp/: infocmp_unit_test.cpp
tests/unit/install/: install_unit_test.cpp
tests/unit/integration/: integration_test.cpp
tests/unit/join/: join_unit_test.cpp
tests/unit/jq/: jq_unit_test.cpp
tests/unit/kill/: kill_unit_test.cpp
tests/unit/less/: less_unit_test.cpp
tests/unit/link/: link_unit_test.cpp
tests/unit/ln/: ln_unit_test.cpp
tests/unit/locale/: locale_unit_test.cpp
tests/unit/logname/: logname_unit_test.cpp
tests/unit/ls/: ls_unit_test.cpp
tests/unit/lsof/: lsof_unit_test.cpp
tests/unit/md5sum/: md5sum_unit_test.cpp
tests/unit/mkdir/: mkdir_unit_test.cpp
tests/unit/mktemp/: mktemp_unit_test.cpp
tests/unit/mpicalc/: mpicalc_unit_test.cpp
tests/unit/mv/: mv_unit_test.cpp
tests/unit/nice/: nice_unit_test.cpp
tests/unit/nl/: nl_unit_test.cpp
tests/unit/nohup/: nohup_unit_test.cpp
tests/unit/nproc/: nproc_unit_test.cpp
tests/unit/numfmt/: numfmt_unit_test.cpp
tests/unit/od/: od_unit_test.cpp
tests/unit/paste/: paste_unit_test.cpp
tests/unit/patch/: patch_unit_test.cpp
tests/unit/pathchk/: pathchk_unit_test.cpp
tests/unit/pinky/: pinky_unit_test.cpp
tests/unit/pr/: pr_unit_test.cpp
tests/unit/ps/: ps_unit_test.cpp
tests/unit/ptx/: ptx_unit_test.cpp
tests/unit/pwd/: pwd_unit_test.cpp
tests/unit/readlink/: readlink_unit_test.cpp
tests/unit/realpath/: realpath_unit_test.cpp
tests/unit/reset/: reset_unit_test.cpp
tests/unit/rm/: rm_unit_test.cpp
tests/unit/rmdir/: rmdir_unit_test.cpp
tests/unit/sdiff/: sdiff_unit_test.cpp
tests/unit/sed/: sed_unit_test.cpp
tests/unit/seq/: seq_unit_test.cpp
tests/unit/sha1sum/: sha1sum_unit_test.cpp
tests/unit/sha224sum/: sha224sum_unit_test.cpp
tests/unit/sha256sum/: sha256sum_unit_test.cpp
tests/unit/sha384sum/: sha384sum_unit_test.cpp
tests/unit/sha512sum/: sha512sum_unit_test.cpp
tests/unit/shred/: shred_unit_test.cpp
tests/unit/shuf/: shuf_unit_test.cpp
tests/unit/sleep/: sleep_unit_test.cpp
tests/unit/sort/: sort_unit_test.cpp
tests/unit/split/: split_unit_test.cpp
tests/unit/stat/: stat_unit_test.cpp
tests/unit/stdbuf/: stdbuf_unit_test.cpp
tests/unit/sum/: sum_unit_test.cpp
tests/unit/sync/: sync_unit_test.cpp
tests/unit/tac/: tac_unit_test.cpp
tests/unit/tail/: tail_unit_test.cpp
tests/unit/tee/: tee_unit_test.cpp
tests/unit/test/: test_unit_test.cpp
tests/unit/test_bracket/: test_bracket_unit_test.cpp
tests/unit/tic/: tic_unit_test.cpp
tests/unit/timeout/: timeout_unit_test.cpp
tests/unit/toe/: toe_unit_test.cpp
tests/unit/top/: top_unit_test.cpp
tests/unit/touch/: touch_unit_test.cpp
tests/unit/tput/: tput_unit_test.cpp
tests/unit/tr/: tr_unit_test.cpp
tests/unit/tree/: tree_unit_test.cpp
tests/unit/true/: true_unit_test.cpp
tests/unit/truncate/: truncate_unit_test.cpp
tests/unit/tsort/: tsort_unit_test.cpp
tests/unit/tty/: tty_unit_test.cpp
tests/unit/u2d/: u2d_unit_test.cpp
(+1044 files in other folders)
